[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/MainGameOverTab.gd" type="Script" id=1]
[ext_resource path="res://src/UI/pause/PauseTabContainer.gd" type="Script" id=2]
[ext_resource path="res://src/UI/GameOverUI.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="GameOverUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 232.85, 81.3131, 46.3969 ],
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
tabs_visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTab" type="MarginContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/MainTab"]
margin_right = 960.0
margin_bottom = 540.0
custom_constants/separation = 26
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleHBox" type="HBoxContainer" parent="TabContainer/MainTab/VBoxContainer"]
margin_left = 392.0
margin_top = 175.0
margin_right = 568.0
margin_bottom = 189.0
size_flags_horizontal = 4
alignment = 1

[node name="FrontLabel" type="Label" parent="TabContainer/MainTab/VBoxContainer/TitleHBox"]
margin_right = 8.0
margin_bottom = 14.0
text = "~"

[node name="TitleLabel" type="Label" parent="TabContainer/MainTab/VBoxContainer/TitleHBox"]
margin_left = 12.0
margin_right = 164.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "YOU DIED. GAME OVER."
align = 1
valign = 1

[node name="BackLabel" type="Label" parent="TabContainer/MainTab/VBoxContainer/TitleHBox"]
margin_left = 168.0
margin_right = 176.0
margin_bottom = 14.0
text = "~"

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/MainTab/VBoxContainer"]
margin_left = 404.0
margin_top = 215.0
margin_right = 555.0
margin_bottom = 307.0
size_flags_horizontal = 4
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="TabContainer/MainTab/VBoxContainer/VBoxContainer"]
margin_right = 151.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 0 )
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../ResumeButton")
text = "RELOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator1" type="HSeparator" parent="TabContainer/MainTab/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 128.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbortButton" type="Button" parent="TabContainer/MainTab/VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 151.0
margin_bottom = 56.0
rect_min_size = Vector2( 128, 0 )
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../SettingsButton")
text = "BACK TO MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="TabContainer/MainTab/VBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 151.0
margin_bottom = 92.0
rect_min_size = Vector2( 128, 0 )
focus_neighbour_top = NodePath("../AbortButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../AbortButton")
text = "QUIT"

[node name="HintLabel" type="Label" parent="TabContainer/MainTab/VBoxContainer"]
margin_left = 223.0
margin_top = 333.0
margin_right = 737.0
margin_bottom = 364.0
size_flags_horizontal = 4
text = "If you reload the game, your death will have merely been a nightmare, and you'll
wake up in the Yurt where you last slept."
align = 1
valign = 1
